--- a/flutter-app/pubspec.yaml
+++ b/flutter-app/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   http: ^0.13.6
   adaptive_theme: ^3.1.1
   syncfusion_flutter_calendar: 20.4.44
+  collection: ^1.18.0
 
 
 dev_dependencies:
